Added bootstrap and reduced app output size

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -2,7 +2,7 @@
 @import "modules/variables.scss";
 
 //Import Foundation & Vendors
-@import "../../node_modules/foundation-sites/dist/foundation.min.css";
+@import "../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap-custom.scss";
 
 //Import partials
 @import "partials/button.scss";
